Feat: 스타일드 버튼 구현 [FRONT-161] - 테마에 따른 버튼 색상 변경 Related to: issue #161

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -18,13 +18,13 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "src",
+    "paths": {
+      "@/*": ["*"]
+    }
   },
   "include": [
     "src"
   ],
-  "baseUrl": "src",
-  "paths": {
-    "@/*": ["*"]
-  }
 }
