--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
@@ -23,7 +24,7 @@
     "workbox-google-analytics": "^6.6.0",
     "workbox-navigation-preload": "^6.6.0",
     "workbox-precaching": "^6.6.0",
-    "workbox-range -requests": "^6.6.0",
+    "workbox-range-requests": "^6.6.0",
     "workbox-routing": "^6.6.0",
     "workbox-strategies": "^6.6.0",
     "workbox-streams": "^6.6.0"
@@ -66,6 +67,6 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^3.0.3",
-    "typescript": "^4.0.0" 
+    "typescript": "^4.0.0"
   }
 }
