--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "recoil": "^0.7.7",
     "styled-components": "^6.0.7",
     "web-vitals": "^2.1.4",
