Chore : Update deploy_to_prod.yml

--- a/.github/workflows/deploy_to_prod.yml
+++ b/.github/workflows/deploy_to_prod.yml
@@ -36,6 +36,7 @@ jobs:
           ECR_REPOSITORY: client/prod/ai-canvas
           IMAGE_TAG: ${{ github.run_number }}
         run: |
+          cd client
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
           docker push $ECR_REGISTRY/$ECR_REPOSITORY --all-tags
