--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-toastify": "^9.1.3",
     "recoil": "^0.7.7",
     "styled-components": "^6.0.7",
+    "sweetalert2": "^11.7.31",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.6.0",
     "workbox-broadcast-update": "^6.6.0",
