Feat: 카카오톡 공유하기 구현 [FRONT-315]

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -27,5 +27,5 @@
   "include": [
     "src",
     "sound.d.ts"
-,"public/service-worker.js",  "src/serviceWorkerRegistration.ts"  ],
+,"public/service-worker.js",  "src/serviceWorkerRegistration.ts", "window.d.ts"  ],
 }
